Fix #18 side margin issues on mobile page width

--- a/style/global/global.scss
+++ b/style/global/global.scss
@@ -44,6 +44,8 @@ body {
 
 section {
     margin-top: $section-margin;
+    margin-left: 1rem;
+    margin-right: 1rem;
 
     h2 {
         margin-bottom: $section-margin;
